--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btnRegistrar"
+        android:layout_width="152dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="36dp"
+        android:backgroundTint="#4A4A4A"
+        android:text="Registrarse"
+        app:iconTint="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cuadroContraseña" />
+
     <TextView
         android:id="@+id/textoInicioSesion"
         android:layout_width="244dp"
@@ -23,18 +35,15 @@
         app:layout_constraintVertical_bias="0.11" />
 
     <Button
-        android:id="@+id/btnAceptar"
+        android:id="@+id/btnIniciar"
         android:layout_width="152dp"
         android:layout_height="73dp"
-        android:layout_marginStart="129dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="130dp"
+        android:layout_marginEnd="36dp"
         android:backgroundTint="#4A4A4A"
-        android:text="Aceptar"
+        android:text="Iniciar sesión"
         app:iconTint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cuadroContraseña" />
 
     <EditText
