Comienza implementacion de Google Maps

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="36dp"
         android:backgroundTint="#4A4A4A"
-        android:text="Registrarse"
+        android:text="Registrar"
         app:iconTint="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cuadroContraseña" />
@@ -24,7 +24,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="83dp"
         android:layout_marginEnd="84dp"
-        android:text="Inicio de sesión"
+        android:text="Inicio de sesión."
         android:textColor="#000000"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -81,7 +81,7 @@
         android:layout_marginEnd="63dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Introduce tu correo electrónico:"
+        android:text="Introduce tu email : "
         android:textColor="#434343"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,7 @@
         android:layout_marginEnd="63dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Introduce tu contraseña:"
+        android:text="Introduce tu contraseña :"
         android:textColor="#434343"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
